syntax = "proto3";

option csharp_namespace = "Identity";

service GrpcIdentity {
    rpc Authenticate (GrpcUserModel) returns (IdentityResponse);
    rpc ValidateToken (GetAllRequest) returns (IdentityResponse);
}

message GrpcUserModel{
    string username = 1;
    string password = 2;
}

message GetAllRequest {
    GrpcUserModel user = 1;
    string token = 2;
}

message GrpcIdentityModel{
    int32 identityId = 1;
    string firstname = 2;
    string lastname = 3;
    string username = 4;
    string role = 5;
    string jwttoken = 6;
}


message IdentityResponse {
    GrpcIdentityModel identity = 1;
}
